Changed links to github links

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<div id="projects-list">
 						<nav>
 							<h3>L<span class="small-caps">IVE</span> S<span class="small-caps">ITES</span></h3>
-							<a href="http://zhermin.com/rank-point-calculator/" target="_blank">
+							<a href="https://zhermin.github.io/rank-point-calculator/" target="_blank">
 								<div class="proj-items">
 									<span class="fa-stack">
 										<i class="fas fa-circle fa-stack-2x"></i>
@@ -133,7 +133,7 @@
 									<p>Read about my coding shenanigans, and my life, on my <strong>Tech Blog [ANECODES]</strong></p>
 								</div>
 							</a>
-							<a href="http://zhermin.com/ngo-junyi/" target="_blank">
+							<a href="https://zhermin.github.io/ngo-junyi/" target="_blank">
 								<div class="proj-items">
 									<span class="fa-stack">
 										<i class="fas fa-circle fa-stack-2x"></i>
