Updated readme and added new movie-searching react webapp

--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
 					<div id="projects-list">
 						<nav>
 							<h3>L<span class="small-caps">IVE</span> S<span class="small-caps">ITES</span></h3>
+							<a href="https://zhermin.github.io/zopcorn/" target="_blank">
+								<div class="proj-items">
+									<span class="fa-stack">
+										<i class="fas fa-circle fa-stack-2x"></i>
+										<i class="fas fa-film fa-stack-1x proj-icons"></i>
+									</span>
+									<p>Search your favourite movies with <strong>ZOPCORN!</strong><br/>(A React Project using themoviedb API)</p>
+								</div>
+							</a>
 							<a href="https://zhermin.github.io/rank-point-calculator/" target="_blank">
 								<div class="proj-items">
 									<span class="fa-stack">
@@ -122,15 +131,6 @@
 										<i class="fas fa-calculator fa-stack-1x proj-icons"></i>
 									</span>
 									<p><strong>Calculate</strong> your A'Level Rank Points and <strong>Compare</strong> with Universities' Indicative Grade Profiles</p>
-								</div>
-							</a>
-							<a href="http://blog.zhermin.com/" target="_blank">
-								<div class="proj-items">
-									<span class="fa-stack">
-										<i class="fas fa-circle fa-stack-2x"></i>
-										<i class="fas fa-book fa-stack-1x proj-icons"></i>
-									</span>
-									<p>Read about my coding shenanigans, and my life, on my <strong>Tech Blog [ANECODES]</strong></p>
 								</div>
 							</a>
 							<a href="https://zhermin.github.io/ngo-junyi/" target="_blank">
