Linked react project to screenshot of the webapp instead

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<div id="projects-list">
 						<nav>
 							<h3>L<span class="small-caps">IVE</span> S<span class="small-caps">ITES</span></h3>
-							<a href="https://zhermin.github.io/zopcorn/" target="_blank">
+							<a href="https://github.com/zhermin/zhermin.github.io/blob/master/images/screenshot_avengers.jpg" target="_blank">
 								<div class="proj-items">
 									<span class="fa-stack">
 										<i class="fas fa-circle fa-stack-2x"></i>
